--- a/styles/sass/_config.scss
+++ b/styles/sass/_config.scss
@@ -3,7 +3,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap");
 //dvije pozadine
 $primary-background-color: #55474e;
-$secondary-background-color: #7e6e6a;
+$secondary-background-color: #7a6b68;
 
 //koliko znam, svugdje imamo jednu boju za text
 $primary-text-color: #fffffff8;
