--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -47,11 +47,16 @@ body {
 
 .header {
   width: 100%;
-  min-height: 60em;
+  min-height: 50em;
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.35)), to(rgba(0, 0, 0, 0.35))), url("/hero.jpg") no-repeat center center/cover;
   background: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)), url("/hero.jpg") no-repeat center center/cover;
-  position: relative;
   z-index: 1;
+}
+
+@media (max-width: 768px) {
+  .header {
+    min-height: 100vh;
+  }
 }
 
 .header__scroll-down {
@@ -60,8 +65,6 @@ body {
   border: 0.15em solid rgba(225, 225, 225, 0.65);
   position: relative;
   border-radius: 0.5em;
-  top: 35em;
-  left: 50%;
 }
 
 .header__scroll-down::after {
@@ -79,11 +82,6 @@ body {
 }
 
 .header__slogan {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -98,10 +96,13 @@ body {
 .header__slogan__text {
   color: white;
   text-transform: uppercase;
-  font-size: clamp(2.5em, 8vw, 7.5em);
+  font-size: clamp(2.5em, 5vw, 7.5em);
   font-family: "Playfair Display", serif;
   font-weight: 400;
-  text-shadow: 0 0 0.1em black;
+  text-shadow: 0em 0em 0.05em black;
+  text-align: center;
+  padding: 0 0.5em;
+  max-width: 15ch;
 }
 
 .header__slogan__button {
@@ -123,6 +124,26 @@ body {
 .header__slogan__button:hover {
   -webkit-box-shadow: none;
           box-shadow: none;
+}
+
+.header .header-slogan-wrapper {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  place-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 2em;
+  padding: 5em 0 0 0;
 }
 
 nav {
@@ -732,24 +753,32 @@ nav {
   line-height: 30px;
 }
 
-.footer-container .contact-footer form textarea {
-  height: 10rem;
-}
-
+.footer-container .contact-footer form input::-webkit-input-placeholder,
 .footer-container .contact-footer form textarea::-webkit-input-placeholder {
   font-family: sans-serif;
+  color: white;
 }
 
+.footer-container .contact-footer form input:-ms-input-placeholder,
 .footer-container .contact-footer form textarea:-ms-input-placeholder {
   font-family: sans-serif;
+  color: white;
 }
 
+.footer-container .contact-footer form input::-ms-input-placeholder,
 .footer-container .contact-footer form textarea::-ms-input-placeholder {
   font-family: sans-serif;
+  color: white;
 }
 
+.footer-container .contact-footer form input::placeholder,
 .footer-container .contact-footer form textarea::placeholder {
   font-family: sans-serif;
+  color: white;
+}
+
+.footer-container .contact-footer form textarea {
+  height: 10rem;
 }
 
 .footer-container .contact-footer form [placeholder]::-webkit-input-placeholder {
@@ -906,18 +935,22 @@ nav {
 
 .search-form input::-webkit-input-placeholder {
   opacity: 1;
+  color: white;
 }
 
 .search-form input:-ms-input-placeholder {
   opacity: 1;
+  color: white;
 }
 
 .search-form input::-ms-input-placeholder {
   opacity: 1;
+  color: white;
 }
 
 .search-form input::placeholder {
   opacity: 1;
+  color: white;
 }
 
 .search-form input:focus {
@@ -1148,18 +1181,22 @@ nav {
 
 .blog-container .search-container input::-webkit-input-placeholder {
   opacity: 1;
+  color: white;
 }
 
 .blog-container .search-container input:-ms-input-placeholder {
   opacity: 1;
+  color: white;
 }
 
 .blog-container .search-container input::-ms-input-placeholder {
   opacity: 1;
+  color: white;
 }
 
 .blog-container .search-container input::placeholder {
   opacity: 1;
+  color: white;
 }
 
 .blog-container .search-container input:focus {
