--- a/styles/sass/_home.scss
+++ b/styles/sass/_home.scss
@@ -21,25 +21,24 @@
 
 .header {
   width: 100%;
-  min-height: 60em;
+  min-height: 50em;
   background: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)),
     url("/hero.jpg") no-repeat center center/cover;
-  position: relative;
   z-index: 1;
-
+  @media (max-width: 768px) {
+    min-height: 100vh;
+  }
   &__scroll-down {
     width: 2em;
     height: 3em;
     border: 0.15em solid rgba(225, 225, 225, 0.65);
     position: relative;
     border-radius: 0.5em;
-    top: 35em;
-    left: 50%;
+
     &::after {
       position: absolute;
       bottom: 10%;
       left: 37.5%;
-      // background: white;
       background: transparent;
       border: 0.1em solid white;
       width: 0.5em;
@@ -51,22 +50,21 @@
   }
 
   &__slogan {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     display: flex;
     flex-direction: column;
     place-items: center;
+
     gap: 2em;
     &__text {
       color: white;
       text-transform: uppercase;
-      font-size: clamp(2.5em, 8vw, 7.5em);
-      // white-space: nowrap;
+      font-size: clamp(2.5em, 5vw, 7.5em);
       font-family: "Playfair Display", serif;
       font-weight: 400;
-      text-shadow: 0 0 0.1em black;
+      text-shadow: 0em 0em 0.05em black;
+      text-align: center;
+      padding: 0 0.5em;
+      max-width: 15ch;
     }
     &__button {
       outline: none;
@@ -86,6 +84,19 @@
       }
     }
   }
+
+  .header-slogan-wrapper {
+    position: absolute;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    place-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 2em;
+    padding: 5em 0 0 0;
+  }
 }
 
 nav {
@@ -96,7 +107,6 @@ nav {
 }
 
 .navbar-wrapper {
-  // border: 1px solid red;
   display: flex;
   place-items: center;
   justify-content: space-between;
@@ -441,14 +451,14 @@ nav {
           border: none;
           border-bottom: 1px solid $primary-text-color;
           line-height: 30px;
+          &::placeholder {
+            font-family: sans-serif;
+            color: white;
+          }
         }
 
         & textarea {
           height: 10rem;
-
-          &::placeholder {
-            font-family: sans-serif;
-          }
         }
 
         & [placeholder]::-webkit-input-placeholder {
